--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="styles/icon/x-diamond-fill.svg" />
-    <title>Femme</title>
+    <title>Contact</title>
 
 </head>
 <body>
