--- a/Contact.html
+++ b/Contact.html
@@ -78,7 +78,7 @@
             <li>
                     <i class="bi bi-truck"></i>
                     <h2>Livraison offerte en France</h2>
-                    <p>Lorem ipsum</p</li>
+                    <p>Lorem ipsum</p></li>
                 
             <li class="footergauche">
                     <i class="bi bi-credit-card"></i>
